--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>groupId</groupId>
     <artifactId>annuaire</artifactId>
     <packaging>war</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <dependencies>
         <dependency>
@@ -15,12 +15,10 @@
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
         </dependency>
-
         <dependency>
-            <groupId>jstl</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.2</version>
-            <scope>provided</scope>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>2.3.1</version>
         </dependency>
 
         <!--Logging-->
@@ -59,8 +57,8 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.6</version>
                 <configuration>
-                    <webXml>src/main/webapp/WEB_INF/web.xml</webXml>
-                    <warName>annuaire</warName>
+                    <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
+                    <warName>${project.artifactId}-${project.version}</warName>
                 </configuration>
             </plugin>
             <plugin>
