--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
         <jstl.version>1.2.1</jstl.version>
         <log4j.version>2.8</log4j.version>
+
     </properties>
 
     <dependencies>
@@ -100,6 +101,16 @@
                     <server>TomcatServer</server>
                     <path>/annuaire</path>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+                <version>3.4.2</version>
+                <configuration>
+                    <propertyFile>liquibase/liquibase.properties</propertyFile>
+                    <changeLogFile>liquibase/changelog/db-changelog-master.xml</changeLogFile>
+                </configuration>
+                <!-- initialize -->
             </plugin>
         </plugins>
     </build>
