added simple liquibase changelog

--- a/src/main/resources/liquibase/liquibase.properties
+++ b/src/main/resources/liquibase/liquibase.properties
@@ -1,4 +1,4 @@
-jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/annuaire
-jdbc.username=root
-jdbc.password=1234
+driver=com.mysql.cj.jdbc.Driver
+url=jdbc:mysql://localhost:3306/annuaire
+username=root
+password=1234
