--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
             <version>6.0.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -108,9 +114,15 @@
                 <version>3.4.2</version>
                 <configuration>
                     <propertyFile>liquibase/liquibase.properties</propertyFile>
-                    <changeLogFile>liquibase/changelog/db-changelog-master.xml</changeLogFile>
+                    <changeLogFile>liquibase/changelog/db.changelog-master.xml</changeLogFile>
                 </configuration>
-                <!-- initialize -->
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>update</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
