--- a/src/main/resources/liquibase/liquibase.properties
+++ b/src/main/resources/liquibase/liquibase.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/annuaire
+url=jdbc:mysql://localhost:3306/annuaire?nullNamePatternMatchesAll=true
 username=root
 password=1234
