added some fake data

--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,7 @@
                 <executions>
                     <execution>
                         <goals>
+                            <goal>clearCheckSums</goal>
                             <goal>update</goal>
                         </goals>
                     </execution>
