doesnt save cirillic chars

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,5 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
+# todo deal with utf-8
 jdbc.url=jdbc:mysql://localhost:3306/annuaire
 jdbc.username=root
 jdbc.password=1234
