--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,14 @@
             <version>3.3.0</version>
         </dependency>
 
+        <!-- JSON -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
