--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
             <version>20160810</version>
         </dependency>
 
+        <!-- StringTemplate -->
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>ST4</artifactId>
+            <version>4.0.7</version>
+        </dependency>
+
 
     </dependencies>
 
