--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ out
 target
 *.iml
 /src/main/resources/email.properties
+/src/main/resources/db.properties
+/src/main/resources/liquibase/liquibase.properties
