added uploads property file and its reader

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ target
 /src/main/resources/email.properties
 /src/main/resources/db.properties
 /src/main/resources/liquibase/liquibase.properties
+/src/main/resources/upload.properties
