--- a/pom.xml
+++ b/pom.xml
@@ -99,11 +99,17 @@
             <version>4.0.7</version>
         </dependency>
 
-        <!-- Apache Commons Email -->
+        <!-- Apache Commons-->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-email</artifactId>
             <version>1.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
         </dependency>
 
         <!-- Quartz -->
