--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,13 @@
             <version>3.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
+
         <!-- Quartz -->
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
