--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
             <version>2.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
 
         <!-- Quartz -->
         <dependency>
