--- a/src/main/resources/db-example.properties
+++ b/src/main/resources/db-example.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=
+jdbc.url= *url*?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=
 jdbc.password=
