--- a/annuaire-web/src/main/webapp/WEB-INF/web.xml
+++ b/annuaire-web/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,14 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
+
+    <error-page>
+        <error-code>403</error-code>
+        <location>/app/error</location>
+    </error-page>
+
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/app/error</location>
+    </error-page>
 </web-app>
