added better-looking error page

--- a/annuaire-web/src/main/webapp/WEB-INF/web.xml
+++ b/annuaire-web/src/main/webapp/WEB-INF/web.xml
@@ -14,8 +14,8 @@
         <location>/app/error</location>
     </error-page>
 
-    <!--<error-page>-->
-        <!--<exception-type>java.lang.Throwable</exception-type>-->
-        <!--<location>/app/error</location>-->
-    <!--</error-page>-->
+    <error-page>
+        <exception-type>java.lang.Throwable</exception-type>
+        <location>/app/error</location>
+    </error-page>
 </web-app>
